--- a/index.html
+++ b/index.html
@@ -1,9 +1,27 @@
 <!doctype html>
 <html lang="ru">
 <head>
-<title>Анекдот</title>
+	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+	<title>LOL</title>
+	<link rel="stylesheet" href="css/styles.css" type="text/css">
 </head>
 <body>
-Мой сайт
+      <div id="wrapper">
+		<header>
+                Заходит как-то Данила поперечный в гей-клуб
+                </header>
+		<div id="heading"></div>
+		<aside></aside>
+		<section>
+                <p><img src="images/club.jpg" width="230" height="180" alt="Club"></p>
+</section>
+	</div>
+        <footer>
+                <ul class="top-menu">
+		<li><a href="/home/">Назад</a></li>
+		<li><a href="/contact/">Вперед</a></li>
+	</ul>
+	</footer>
 </body>
 </html>
