background resize img

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
       <div id="wrapper">
 		<header>
-                Заходит как-то Данила поперечный в гей-клуб
+                Заходит как-то Данила Поперечный в гей-клуб
                 </header>
 		<div id="heading"></div>
 		<aside></aside>
 		<section>
-                <p><img src="images/club.jpg" width="230" height="180" alt="Club"></p>
+                <p><img src="images/club.jpg" width="400" height="300" alt="Club"></p>
 </section>
 	</div>
         <footer>
