--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		
 		<section>
                 <p><img src="images/club.jpg" width="400" height="300" alt="Club"></p>
-                <p><iframe width="560" height="315" src="https://www.youtube.com/embed/zXz0InOf-z0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/zXz0InOf-z0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </section>
 	</div>
         <footer>
