--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
 Все вокруг него целуются, порятся в бублика, танцуют под песни Азиса
                 </header>
                 <p><img src="images/aziz.png" width="400" height="300" alt="Aziz"></p>
+                <header>                
+Вдруг все обращают внимание на Данилу. Шепчутся между собой, отходят в сторону, словно боятся.
+И тут выходит предводитель геев, самый гейский гей в розовой шубе
+                </header>
+                <p><img src="images/pink.png" width="400" height="300" alt="Pink"></p>
+                <header>и говорит Даниле Поперечному: </header>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/zXz0InOf-z0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </section>
 	</div>
